# MSYS2-toolchain

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  MSYS2.cmake  README.md  TRIPLETS.cmake  VERSION  vcpkg.json
docs/users/: MAKE_VARS.md  MSYS2.md  MSYSTEM.md
etc/: profile.sh
include/: main.h
include/application/: application.h  configuration.h  sharedlib.h  staticlib.h
include/application/impl/: library.h
include/application/runtime/: main.h
ports/application/: duff_portfile.cmake  portfile.cmake
ports/fmt/: portfile.cmake
scripts/: build_info.cmake  ports.cmake
scripts/buildsystems/: MSYS2.cmake
scripts/buildsystems/make_wrapper/: cl_cpp_wrapper  windres-rc
scripts/buildsystems/msbuild/: applocal.ps1  msys-general  msys2.props  msys2.targets
scripts/cmake/: execute_process.cmake  msys-gzip.cmake  msys_acquire_msys.cmake  msys_add_to_path.cmake  msys_backup_restore_env_vars.cmake  msys_common_definitions.cmake  msys_configure_cmake.cmake  msys_configure_make.cmake  msys_copy_tool_dependencies.cmake  msys_copy_tools.cmake  msys_download_distfile.cmake  msys_execute_build_process.cmake  msys_execute_in_download_mode.cmake  msys_execute_required_process.cmake  msys_execute_required_process_repeat.cmake  msys_find_acquire_program(NINJA).cmake  msys_find_acquire_program(PATCHELF).cmake  msys_find_acquire_program(PKGCONFIG).cmake  msys_find_acquire_program.cmake  msys_fixup_pkgconfig.cmake  msys_from_github.cmake  msys_host_path_list.cmake  msys_list.cmake  z_msys_fixup_rpath.cmake  z_msys_forward_output_variable.cmake  z_msys_function_arguments.cmake  z_msys_get_cmake_vars.cmake  z_msys_prettify_command_line.cmake  z_msys_setup_pkgconfig_path.cmake
scripts/cmake/Modules/: CMakeCLANG64FindMake.cmake  CMakeFindMINGW64Make.cmake  CMakeFindMSYSMakefiles.cmake  CMakeMINGW64FindMake.cmake  CMakeMSYSTEMFindMake.cmake  CheckAtomic.cmake  CheckCompilerVersion.cmake  ChooseMSVCCRT.cmake  DLAGENTS.cmake  DetermineGCCCompatible.cmake  FindMSYSTEMCommands.cmake  FindMinGW64.cmake  FindMsys.cmake  FindPackageHandleStandardArgs.cmake  FindPackageMessage.cmake  GetHostTriplet.cmake  GetSourceInfo.cmake  SetTargetTriplet.cmake  UseLibtool.cmake  VersionFromVCS.cmake  msys-FindAR.cmake  msys-FindBash.cmake  msys-FindCP.cmake  msys-FindGZ.cmake  msys-FindMV.cmake  msys-FindRM.cmake  msys-FindTAR.cmake  msys-acquire-msys.cmake  msys-tools-AR.cmake  msys-tools-GZ.cmake  msys_compression_defaults.cmake
scripts/cmake/Modules/Compiler/: CMakeCommonCompilerMacros.cmake  GNU-ASM.cmake  GNU-CXX.cmake  GNU.cmake  MINGW64-ASM.cmake  MINGW64-C.cmake  MINGW64-CXX-DetermineCompiler.cmake  MINGW64-CXX.cmake  MINGW64-FindBinUtils.cmake  MINGW64-OBJC.cmake  MINGW64-OBJCXX.cmake  MINGW64.cmake  MSYSTEM-C.cmake  MSYSTEM-CLANG-FindBinUtils.cmake  MSYSTEM-CXX.cmake  MSYSTEM.cmake
scripts/cmake/Modules/Platform/: GNU.cmake  MINGW64-C.cmake  MINGW64-CXX.cmake  MINGW64-Determine-C.cmake  MINGW64-Determine-CXX.cmake  MINGW64-Fortran.cmake  MINGW64-GNU-C.cmake  MINGW64-GNU-CXX.cmake  MINGW64-GNU.cmake  MINGW64.cmake  MSYS-Determine-CXX.cmake  MSYS-GNU-C.cmake  MSYS-GNU.cmake  MSYS.cmake  MSYSTEM-C.cmake  MSYSTEM-CLANG-C.cmake  MSYSTEM-CLANG-CXX.cmake  MSYSTEM-CLANG-Determine-C.cmake  MSYSTEM-CLANG-Determine-CXX.cmake  MSYSTEM-CLANG.cmake  MSYSTEM-CXX.cmake  MSYSTEM-GNU-C.cmake  MSYSTEM-GNU-CXX.cmake  MSYSTEM-GNU-Determine-C.cmake  MSYSTEM-GNU-Determine-CXX.cmake  MSYSTEM-GNU.cmake  MSYSTEM-Initialize.cmake  MSYSTEM-initialize.cmake  MSYSTEM.cmake  MSYSTEMPaths.cmake  Mingw64Paths.cmake
scripts/cmake/Modules/_MinGW64/: MINGW64InstallDirs.cmake
scripts/detect_compiler/: CMakeLists.txt
scripts/get_cmake_vars/: CMakeLists.txt
scripts/msys/: MSYSTEM.cmake
scripts/shell/: MAKE_ENV.sh  MSYSTEM.sh
scripts/toolchains/: CLANG32.cmake  CLANG64.cmake  CLANGARM64.cmake  GENERIC.cmake  MINGW32.cmake  MINGW64.cmake  MSYS.cmake  MSYS2.cmake  UCRT64.cmake
scripts/toolchains/profiles/MINGW64/: MINGW64-ASMCompiler.cmake  MINGW64-CCompiler.cmake  MINGW64-CPreProcessor.cmake  MINGW64-CXXCompiler.cmake  MINGW64-FortranCompiler.cmake  MINGW64-Linker.cmake  MINGW64-OBJCCompiler.cmake  MINGW64-OBJCXXCompiler.cmake  MINGW64-RCCompiler.cmake  MINGW64-Tools.cmake  _MinGW64.cmake
share/CLANG64/: config.h
share/MSYS2/CLANG/: config.h
share/MSYS2/GNU/: config.h
share/UCRT64/: config.h
src/: main.cpp
src/application/: sharedlib.cpp  staticlib.cpp
src/application/impl/: library.cpp
src/application/runtime/: main.cpp
triplets/community/: arm64-msys-dynamic.cmake  arm64-msystem-clangarm64-dynamic.cmake  arm64-msystem-clangarm64-static.cmake  x64-msys-dynamic.cmake  x64-msys-static.cmake  x64-msystem-clang64-dynamic.cmake  x64-msystem-clang64-static.cmake  x64-msystem-mingw64-static.cmake  x64-msystem-msys2-dynamic.cmake  x64-msystem-msys2-static.cmake  x64-msystem-ucrt64-dynamic.cmake  x64-msystem-ucrt64-static.cmake  x86-msys-dynamic.cmake  x86-msys-static.cmake  x86-msystem-clang32-dynamic.cmake  x86-msystem-clang32-static.cmake  x86-msystem-mingw32-dynamic.cmake  x86-msystem-mingw32-static.cmake  x86_64-pc-mingw64.cmake  x86_64-w64-windows-gnu-dynamic.cmake
